# api-rest-oatpp

./: CMakeLists.txt  README.md  mongo.sh
src/: App.cpp  AppComponent.hpp  AppComponentAsync.hpp
src/controller/: UserController.hpp
src/db/: Database.cpp  Database.hpp  Model.hpp
src/dto/: DTOs.hpp
